ABNTParser.py
# Generated from ABNT.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ABNTParser ( Parser ):

    grammarFileName = "ABNT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'artigo'", "'{'", "'nome'", "'='", "','", 
                     "'titulo'", "'jornal'", "'['", "']'", "'volume'", "'pagina'", 
                     "'mes'", "'ano'", "'}'", "'livro'", "'subtitulo'", 
                     "'edicao'", "'editora'", "'mes_publicacao'", "'ano_publicacao'", 
                     "'periodico'", "'id'", "'ISBN'", "'local_publicacao'", 
                     "'data_publicacao'", "'idioma'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CADEIA", "ID", 
                      "INT", "WS" ]

    RULE_programa = 0
    RULE_variables = 1
    RULE_citation = 2
    RULE_articleCitation = 3
    RULE_bookCitation = 4
    RULE_periodico = 5
    RULE_jornal = 6
    RULE_publisher = 7
    RULE_names = 8
    RULE_title = 9
    RULE_localTitle = 10
    RULE_bookTitle = 11
    RULE_volume = 12
    RULE_pages = 13
    RULE_month = 14
    RULE_year = 15
    RULE_edition = 16
    RULE_publishMonth = 17
    RULE_publishYear = 18
    RULE_name = 19

    ruleNames =  [ "programa", "variables", "citation", "articleCitation", 
                   "bookCitation", "periodico", "jornal", "publisher", "names", 
                   "title", "localTitle", "bookTitle", "volume", "pages", 
                   "month", "year", "edition", "publishMonth", "publishYear", 
                   "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    CADEIA=27
    ID=28
    INT=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def citation(self):
            return self.getTypedRuleContext(ABNTParser.CitationContext,0)


        def EOF(self):
            return self.getToken(ABNTParser.EOF, 0)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ABNTParser.VariablesContext)
            else:
                return self.getTypedRuleContext(ABNTParser.VariablesContext,i)


        def getRuleIndex(self):
            return ABNTParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ABNTParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.variables()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2359424) != 0)):
                    break

            self.state = 45
            self.citation()
            self.state = 46
            self.match(ABNTParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def periodico(self):
            return self.getTypedRuleContext(ABNTParser.PeriodicoContext,0)


        def jornal(self):
            return self.getTypedRuleContext(ABNTParser.JornalContext,0)


        def publisher(self):
            return self.getTypedRuleContext(ABNTParser.PublisherContext,0)


        def getRuleIndex(self):
            return ABNTParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = ABNTParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variables)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.periodico()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.jornal()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.publisher()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def articleCitation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ABNTParser.ArticleCitationContext)
            else:
                return self.getTypedRuleContext(ABNTParser.ArticleCitationContext,i)


        def bookCitation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ABNTParser.BookCitationContext)
            else:
                return self.getTypedRuleContext(ABNTParser.BookCitationContext,i)


        def getRuleIndex(self):
            return ABNTParser.RULE_citation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCitation" ):
                listener.enterCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCitation" ):
                listener.exitCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCitation" ):
                return visitor.visitCitation(self)
            else:
                return visitor.visitChildren(self)




    def citation(self):

        localctx = ABNTParser.CitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_citation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==15:
                self.state = 55
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 53
                    self.articleCitation()
                    pass
                elif token in [15]:
                    self.state = 54
                    self.bookCitation()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArticleCitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def names(self):
            return self.getTypedRuleContext(ABNTParser.NamesContext,0)


        def title(self):
            return self.getTypedRuleContext(ABNTParser.TitleContext,0)


        def ID(self):
            return self.getToken(ABNTParser.ID, 0)

        def volume(self):
            return self.getTypedRuleContext(ABNTParser.VolumeContext,0)


        def pages(self):
            return self.getTypedRuleContext(ABNTParser.PagesContext,0)


        def month(self):
            return self.getTypedRuleContext(ABNTParser.MonthContext,0)


        def year(self):
            return self.getTypedRuleContext(ABNTParser.YearContext,0)


        def getRuleIndex(self):
            return ABNTParser.RULE_articleCitation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArticleCitation" ):
                listener.enterArticleCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArticleCitation" ):
                listener.exitArticleCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArticleCitation" ):
                return visitor.visitArticleCitation(self)
            else:
                return visitor.visitChildren(self)




    def articleCitation(self):

        localctx = ABNTParser.ArticleCitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_articleCitation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ABNTParser.T__0)
            self.state = 61
            self.match(ABNTParser.T__1)
            self.state = 62
            self.match(ABNTParser.T__2)
            self.state = 63
            self.match(ABNTParser.T__3)
            self.state = 64
            self.names()
            self.state = 65
            self.match(ABNTParser.T__4)
            self.state = 66
            self.match(ABNTParser.T__5)
            self.state = 67
            self.match(ABNTParser.T__3)
            self.state = 68
            self.title()
            self.state = 69
            self.match(ABNTParser.T__4)
            self.state = 70
            self.match(ABNTParser.T__6)
            self.state = 71
            self.match(ABNTParser.T__3)
            self.state = 72
            self.match(ABNTParser.T__7)
            self.state = 73
            self.match(ABNTParser.ID)
            self.state = 74
            self.match(ABNTParser.T__8)
            self.state = 75
            self.match(ABNTParser.T__4)
            self.state = 76
            self.match(ABNTParser.T__9)
            self.state = 77
            self.match(ABNTParser.T__3)
            self.state = 78
            self.volume()
            self.state = 79
            self.match(ABNTParser.T__4)
            self.state = 80
            self.match(ABNTParser.T__10)
            self.state = 81
            self.match(ABNTParser.T__3)
            self.state = 82
            self.pages()
            self.state = 83
            self.match(ABNTParser.T__4)
            self.state = 84
            self.match(ABNTParser.T__11)
            self.state = 85
            self.match(ABNTParser.T__3)
            self.state = 86
            self.month()
            self.state = 87
            self.match(ABNTParser.T__4)
            self.state = 88
            self.match(ABNTParser.T__12)
            self.state = 89
            self.match(ABNTParser.T__3)
            self.state = 90
            self.year()
            self.state = 91
            self.match(ABNTParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BookCitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def names(self):
            return self.getTypedRuleContext(ABNTParser.NamesContext,0)


        def bookTitle(self):
            return self.getTypedRuleContext(ABNTParser.BookTitleContext,0)


        def edition(self):
            return self.getTypedRuleContext(ABNTParser.EditionContext,0)


        def ID(self):
            return self.getToken(ABNTParser.ID, 0)

        def publishMonth(self):
            return self.getTypedRuleContext(ABNTParser.PublishMonthContext,0)


        def publishYear(self):
            return self.getTypedRuleContext(ABNTParser.PublishYearContext,0)


        def CADEIA(self):
            return self.getToken(ABNTParser.CADEIA, 0)

        def getRuleIndex(self):
            return ABNTParser.RULE_bookCitation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBookCitation" ):
                listener.enterBookCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBookCitation" ):
                listener.exitBookCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBookCitation" ):
                return visitor.visitBookCitation(self)
            else:
                return visitor.visitChildren(self)




    def bookCitation(self):

        localctx = ABNTParser.BookCitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bookCitation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ABNTParser.T__14)
            self.state = 94
            self.match(ABNTParser.T__1)
            self.state = 95
            self.match(ABNTParser.T__2)
            self.state = 96
            self.match(ABNTParser.T__3)
            self.state = 97
            self.names()
            self.state = 98
            self.match(ABNTParser.T__4)
            self.state = 99
            self.match(ABNTParser.T__5)
            self.state = 100
            self.match(ABNTParser.T__3)
            self.state = 101
            self.bookTitle()
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 102
                self.match(ABNTParser.T__4)
                self.state = 103
                self.match(ABNTParser.T__15)
                self.state = 104
                self.match(ABNTParser.T__3)
                self.state = 105
                self.match(ABNTParser.T__7)
                self.state = 106
                self.match(ABNTParser.CADEIA)
                self.state = 107
                self.match(ABNTParser.T__8)


            self.state = 110
            self.match(ABNTParser.T__4)
            self.state = 111
            self.match(ABNTParser.T__16)
            self.state = 112
            self.match(ABNTParser.T__3)
            self.state = 113
            self.edition()
            self.state = 114
            self.match(ABNTParser.T__4)
            self.state = 115
            self.match(ABNTParser.T__17)
            self.state = 116
            self.match(ABNTParser.T__3)
            self.state = 117
            self.match(ABNTParser.T__7)
            self.state = 118
            self.match(ABNTParser.ID)
            self.state = 119
            self.match(ABNTParser.T__8)
            self.state = 120
            self.match(ABNTParser.T__4)
            self.state = 121
            self.match(ABNTParser.T__18)
            self.state = 122
            self.match(ABNTParser.T__3)
            self.state = 123
            self.publishMonth()
            self.state = 124
            self.match(ABNTParser.T__4)
            self.state = 125
            self.match(ABNTParser.T__19)
            self.state = 126
            self.match(ABNTParser.T__3)
            self.state = 127
            self.publishYear()
            self.state = 128
            self.match(ABNTParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeriodicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ABNTParser.ID, 0)

        def CADEIA(self):
            return self.getToken(ABNTParser.CADEIA, 0)

        def INT(self):
            return self.getToken(ABNTParser.INT, 0)

        def getRuleIndex(self):
            return ABNTParser.RULE_periodico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeriodico" ):
                listener.enterPeriodico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeriodico" ):
                listener.exitPeriodico(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPeriodico" ):
                return visitor.visitPeriodico(self)
            else:
                return visitor.visitChildren(self)




    def periodico(self):

        localctx = ABNTParser.PeriodicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_periodico)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(ABNTParser.T__20)
            self.state = 131
            self.match(ABNTParser.T__1)
            self.state = 132
            self.match(ABNTParser.T__21)
            self.state = 133
            self.match(ABNTParser.T__3)
            self.state = 134
            self.match(ABNTParser.ID)
            self.state = 135
            self.match(ABNTParser.T__4)
            self.state = 136
            self.match(ABNTParser.T__2)
            self.state = 137
            self.match(ABNTParser.T__3)
            self.state = 138
            self.match(ABNTParser.CADEIA)
            self.state = 139
            self.match(ABNTParser.T__4)
            self.state = 140
            self.match(ABNTParser.T__22)
            self.state = 141
            self.match(ABNTParser.T__3)
            self.state = 142
            self.match(ABNTParser.INT)
            self.state = 143
            self.match(ABNTParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JornalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ABNTParser.ID, 0)

        def CADEIA(self, i:int=None):
            if i is None:
                return self.getTokens(ABNTParser.CADEIA)
            else:
                return self.getToken(ABNTParser.CADEIA, i)

        def getRuleIndex(self):
            return ABNTParser.RULE_jornal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJornal" ):
                listener.enterJornal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJornal" ):
                listener.exitJornal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJornal" ):
                return visitor.visitJornal(self)
            else:
                return visitor.visitChildren(self)




    def jornal(self):

        localctx = ABNTParser.JornalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_jornal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(ABNTParser.T__6)
            self.state = 146
            self.match(ABNTParser.T__1)
            self.state = 147
            self.match(ABNTParser.T__21)
            self.state = 148
            self.match(ABNTParser.T__3)
            self.state = 149
            self.match(ABNTParser.ID)
            self.state = 150
            self.match(ABNTParser.T__4)
            self.state = 151
            self.match(ABNTParser.T__2)
            self.state = 152
            self.match(ABNTParser.T__3)
            self.state = 153
            self.match(ABNTParser.CADEIA)
            self.state = 154
            self.match(ABNTParser.T__4)
            self.state = 155
            self.match(ABNTParser.T__23)
            self.state = 156
            self.match(ABNTParser.T__3)
            self.state = 157
            self.match(ABNTParser.CADEIA)
            self.state = 158
            self.match(ABNTParser.T__4)
            self.state = 159
            self.match(ABNTParser.T__24)
            self.state = 160
            self.match(ABNTParser.T__3)
            self.state = 161
            self.match(ABNTParser.CADEIA)
            self.state = 162
            self.match(ABNTParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PublisherContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ABNTParser.ID, 0)

        def CADEIA(self, i:int=None):
            if i is None:
                return self.getTokens(ABNTParser.CADEIA)
            else:
                return self.getToken(ABNTParser.CADEIA, i)

        def getRuleIndex(self):
            return ABNTParser.RULE_publisher

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPublisher" ):
                listener.enterPublisher(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPublisher" ):
                listener.exitPublisher(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPublisher" ):
                return visitor.visitPublisher(self)
            else:
                return visitor.visitChildren(self)




    def publisher(self):

        localctx = ABNTParser.PublisherContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_publisher)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(ABNTParser.T__17)
            self.state = 165
            self.match(ABNTParser.T__1)
            self.state = 166
            self.match(ABNTParser.T__21)
            self.state = 167
            self.match(ABNTParser.T__3)
            self.state = 168
            self.match(ABNTParser.ID)
            self.state = 169
            self.match(ABNTParser.T__4)
            self.state = 170
            self.match(ABNTParser.T__2)
            self.state = 171
            self.match(ABNTParser.T__3)
            self.state = 172
            self.match(ABNTParser.CADEIA)
            self.state = 173
            self.match(ABNTParser.T__4)
            self.state = 174
            self.match(ABNTParser.T__25)
            self.state = 175
            self.match(ABNTParser.T__3)
            self.state = 176
            self.match(ABNTParser.CADEIA)
            self.state = 177
            self.match(ABNTParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ABNTParser.NameContext)
            else:
                return self.getTypedRuleContext(ABNTParser.NameContext,i)


        def getRuleIndex(self):
            return ABNTParser.RULE_names

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNames" ):
                listener.enterNames(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNames" ):
                listener.exitNames(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNames" ):
                return visitor.visitNames(self)
            else:
                return visitor.visitChildren(self)




    def names(self):

        localctx = ABNTParser.NamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_names)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(ABNTParser.T__7)
            self.state = 180
            self.name()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 181
                self.match(ABNTParser.T__4)
                self.state = 182
                self.name()
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 188
            self.match(ABNTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ABNTParser.NameContext,0)


        def getRuleIndex(self):
            return ABNTParser.RULE_title

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitle" ):
                listener.enterTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitle" ):
                listener.exitTitle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitle" ):
                return visitor.visitTitle(self)
            else:
                return visitor.visitChildren(self)




    def title(self):

        localctx = ABNTParser.TitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_title)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(ABNTParser.T__7)
            self.state = 191
            self.name()
            self.state = 192
            self.match(ABNTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalTitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ABNTParser.NameContext,0)


        def getRuleIndex(self):
            return ABNTParser.RULE_localTitle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalTitle" ):
                listener.enterLocalTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalTitle" ):
                listener.exitLocalTitle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalTitle" ):
                return visitor.visitLocalTitle(self)
            else:
                return visitor.visitChildren(self)




    def localTitle(self):

        localctx = ABNTParser.LocalTitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_localTitle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(ABNTParser.T__7)
            self.state = 195
            self.name()
            self.state = 196
            self.match(ABNTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BookTitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ABNTParser.NameContext,0)


        def getRuleIndex(self):
            return ABNTParser.RULE_bookTitle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBookTitle" ):
                listener.enterBookTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBookTitle" ):
                listener.exitBookTitle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBookTitle" ):
                return visitor.visitBookTitle(self)
            else:
                return visitor.visitChildren(self)




    def bookTitle(self):

        localctx = ABNTParser.BookTitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bookTitle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(ABNTParser.T__7)
            self.state = 199
            self.name()
            self.state = 200
            self.match(ABNTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VolumeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ABNTParser.INT, 0)

        def getRuleIndex(self):
            return ABNTParser.RULE_volume

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVolume" ):
                listener.enterVolume(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVolume" ):
                listener.exitVolume(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVolume" ):
                return visitor.visitVolume(self)
            else:
                return visitor.visitChildren(self)




    def volume(self):

        localctx = ABNTParser.VolumeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_volume)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(ABNTParser.T__7)
            self.state = 203
            self.match(ABNTParser.INT)
            self.state = 204
            self.match(ABNTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PagesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ABNTParser.INT, 0)

        def getRuleIndex(self):
            return ABNTParser.RULE_pages

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPages" ):
                listener.enterPages(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPages" ):
                listener.exitPages(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPages" ):
                return visitor.visitPages(self)
            else:
                return visitor.visitChildren(self)




    def pages(self):

        localctx = ABNTParser.PagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_pages)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.match(ABNTParser.T__7)
            self.state = 207
            self.match(ABNTParser.INT)
            self.state = 208
            self.match(ABNTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MonthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ABNTParser.INT, 0)

        def getRuleIndex(self):
            return ABNTParser.RULE_month

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMonth" ):
                listener.enterMonth(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMonth" ):
                listener.exitMonth(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMonth" ):
                return visitor.visitMonth(self)
            else:
                return visitor.visitChildren(self)




    def month(self):
